objects/Resource_Flat_Pay__c/Resource_Flat_Pay__c.object-meta.xml
<CustomObject>
    <label>Resource Flat Pay</label>
    <nameField>
        <displayFormat>FRP-{000000000}</displayFormat>
        <label>Entry No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Flat Pays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>