objects/Resource_Flat_Pay__c/fields/Flat_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flat Rate Type</label>
    <referenceTo>Flat_Rate_Type__c</referenceTo>
    <relationshipLabel>Resource Flat Pays</relationshipLabel>
    <relationshipName>Resource_Flat_Pays</relationshipName>
    <type>Lookup</type>
</CustomField>