objects/Resource_Flat_Pay__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Show_Flat_Pay_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Time_Rate_Code</valueSetName>
    </valueSet>
</CustomField>