objects/Resource_Flat_Pay__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <formula>T_M_Line__r.Resource_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>