objects/Resource_Flat_Pay__c/fields/Show_Flat_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Show_Flat_Pay_Code__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Flat Pay Code</label>
    <type>Checkbox</type>
</CustomField>