objects/Resource_Flat_Pay__c/fields/T_M__c.field-meta.xml
<CustomField>
    <fullName>T_M__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T&amp;M</label>
    <referenceTo>TM__c</referenceTo>
    <relationshipLabel>Resource Flat Pays</relationshipLabel>
    <relationshipName>Resource_Flat_Pays</relationshipName>
    <type>Lookup</type>
</CustomField>