objects/Resource_Flat_Pay__c/fields/T_M_Line__c.field-meta.xml
<CustomField>
    <fullName>T_M_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T&amp;M Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TM_Line__c.Category__c</field>
            <operation>equals</operation>
            <value>Labor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TM_Line__c</referenceTo>
    <relationshipLabel>Resource Flat Pays (T&amp;M Line)</relationshipLabel>
    <relationshipName>Resource_Flat_Pays1</relationshipName>
    <type>Lookup</type>
</CustomField>