objects/Resource_Flat_Pay__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measure</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Resource Flat Pays</relationshipLabel>
    <relationshipName>Resource_Flat_Pays</relationshipName>
    <type>Lookup</type>
</CustomField>